[gd_scene load_steps=2 format=3 uid="uid://bdm34mjm5llly"]

[ext_resource type="Script" path="res://XR/performance_metrics.gd" id="1_o6i7c"]

[node name="PerformanceMetrics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6i7c")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="CPURenderTimeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CPU Render Time:"

[node name="CPURenderTimeValue" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0ms"

[node name="GPURenderTimeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GPU Render Time:"

[node name="GPURenderTimeValue" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0ms"

[node name="TotalRenderTimeLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Render Time:"

[node name="TotalRenderTimeValue" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0ms"

[node name="FPSLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FPS:"

[node name="FPSValue" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
